# custom-clang-tidy-checks

./: .gitignore  README.md
autocrypt-checker-test/: .clang-tidy  CMakeLists.txt
autocrypt-checker-test/cert-cpp/: CMakeLists.txt
autocrypt-checker-test/cert-cpp/src/: cert-DCL50.cpp
autocrypt-checker-test/cmake/module/: ClangTidyConfig.cmake
clang-tools-extra/clang-tidy/autocrypt/: AutocryptTidyModule.cpp  CMakeLists.txt  EmptyCheck.cpp  EmptyCheck.h
